--- a/package.json
+++ b/package.json
@@ -10,30 +10,30 @@
     "watch": "webpack --mode development --watch"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.0",
-    "@babel/plugin-transform-classes": "^7.22.0",
-    "@babel/plugin-transform-runtime": "^7.22.0",
-    "@babel/preset-env": "^7.22.0",
-    "assert": "^2.0.0",
-    "babel-loader": "^9.1.0",
-    "buffer": "^6.0.3",
+    "@babel/core": "^7.28.0",
+    "@babel/plugin-transform-classes": "^7.28.0",
+    "@babel/plugin-transform-runtime": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "assert": "^2.1.0",
+    "babel-loader": "^9.2.1",
     "browserify-zlib": "^0.2.0",
-    "crypto-browserify": "^3.12.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "url": "^0.11.1",
+    "url": "^0.11.4",
     "util": "^0.12.5",
     "vm-browserify": "^1.1.2",
-    "webpack": "^5.88.0",
-    "webpack-cli": "^5.1.0"
+    "webpack": "^5.100.2",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "enumify": "^2.0.0",
-    "unpdf": "^0.11.0",
-    "pdfjs-dist": "^3.11.0"
+    "pdfjs-dist": "^3.11.174",
+    "unpdf": "^0.11.0"
   }
 }
